--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </tr>
 </table>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-<h3><a href="D:\Udemy Web Dev\HTML -Personal Site\Contact-me.html">Contact me</a></h3>
+<h3><a href="Contact-me.html">Contact me</a></h3>
 
 
 </body>
